# miaangine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
asset/shader/: testing-fs.glsl
demo/: CMakeLists.txt  main.cpp
include/: mia.h  mia.hpp
include/core/: engine.hpp
include/core/debug/: log-system.hpp
include/core/event/: event.hpp
include/core/input/: input-manager.hpp
include/entity/: entity-manager.hpp  entity-manager.inl  entity.hpp
include/entity/shape/: rectangle-shape.hpp  shape.hpp
include/entity/world/: point.hpp  transform.hpp
include/general/: math.hpp
include/graphics/: renderer.hpp  vertex-array.hpp
include/util/: struct.hpp
lib/cmake/: sdl2-config-version.cmake  sdl2-config.cmake  spdlogConfigTargets.cmake
lib/glfw/: glfw3Config.cmake
lib/glfw-3.4/: glfw3Config.cmake
miaangine/: mia.h
miaangine/src/core/: engine.h
miaangine/src/entity/: entity-manager.cpp  entity-manager.inl  entity.cpp  entity.h
miaangine/src/event/: event-manager.cpp  event.cpp
miaangine/src/input/: input-manager.cpp
miaangine/src/render/shader/: shader.cpp
miaangine/src/render/vertex/: vertex-array.cpp  vertex-buffer.cpp
miaangine/src/world/: transform.h
miaangine/src/world/shape/: rectangle-shape.cpp
src/core/: engine.cpp  engine.h  input.cpp  input.h  libinclude.h
src/core/debug/: log-system.cpp
src/core/event/: event-manager.cpp  event.cpp
src/core/input/: input-manager.cpp
src/debug/: log-system.cpp  log-system.h
src/entity/: entity-manager.cpp  entity-manager.h  entity.cpp  entity.h  entity.inl
src/entity/shape/: rectangle-shape.cpp
src/entity/world/: point.cpp  transform.cpp
src/event/: event-manager.cpp  event-manager.h
src/general/: math.cpp
src/general/math/: math.cpp  math.h  matrix.cpp  matrix.h  rect.h  vector.cpp  vector.h
src/graphics/: index-buffer.cpp  renderer.cpp  shader-util.cpp  shader.cpp  vertex-array.cpp  vertex-buffer.cpp
src/input/: input-manager.cpp  input-manager.h
src/render/: vertex-array.cpp  vertex-buffer.cpp  vertex-buffer.h
src/render/general/: renderer.cpp  renderer.h
src/render/shader/: shader-util.cpp  shader-util.h  shader.h
src/render/vertex/: index-buffer.cpp  index-buffer.h  vertex-array.h  vertex-buffer.h
src/shaders/: fs.shader  shader-util.cpp  shader-util.h  vs.shader
src/util/: singleton.hpp
src/world/: point.cpp  point.h  transform.h
src/world/shape/: rectangle-shape.h  shape.h
test/: CMakeLists.txt  entity-test.cpp
